continue to flesh out basic notes page.

--- a/src/Styles/global.scss
+++ b/src/Styles/global.scss
@@ -8,3 +8,8 @@
 /* Pages
 /* ======================================================= */
 @import "./pages/app";
+
+/* Components
+/* ======================================================= */
+@import "./components/navbar";
+@import "./components/splitters";
