--- a/src/Styles/helpers/variables.scss
+++ b/src/Styles/helpers/variables.scss
@@ -2,6 +2,7 @@ $white: #ffffff;
 $lightGreyText: #a1a1a1;
 $midGrey: #616161;
 $darkGrey: #3e3e3e;
+$darkestGrey: #232323;
 $black: #000000;
 $eventDefault: #6d5353;
 $characterDefault: #465B3C;
