--- a/src/Styles/pages/_app.scss
+++ b/src/Styles/pages/_app.scss
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+//  ========= main ======== //
+
+* {
+  color: $white;
+}
+
+html, main {
+  background-color: $darkestGrey;
+  height: 100%;
+  width: 100%;
+}
+
