--- a/src/Styles/global.scss
+++ b/src/Styles/global.scss
@@ -13,3 +13,5 @@
 /* ======================================================= */
 @import "./components/navbar";
 @import "./components/splitters";
+@import "./components/scribbleNotes";
+@import "./components/footer";
