--- a/src/Styles/global.scss
+++ b/src/Styles/global.scss
@@ -14,4 +14,5 @@
 @import "./components/navbar";
 @import "./components/splitters";
 @import "./components/scribbleNotes";
+@import "./components/scribbleCard";
 @import "./components/footer";
