add stuff from last work sess

--- a/src/Styles/components/_scribbleNotes.scss
+++ b/src/Styles/components/_scribbleNotes.scss
@@ -43,6 +43,13 @@
     font-size: 2vh;
 }
 
+.icon {
+    height: 4vh;
+}
+
+.icon-search {
+    height: 2.5vh;
+}
 
 // --------------  actual notes component -------------- //
 
