finish stylings on simple notes

--- a/src/Styles/components/_scribbleNotes.scss
+++ b/src/Styles/components/_scribbleNotes.scss
@@ -56,32 +56,33 @@
 }
 
 // --------------  actual notes component -------------- //
-
+.notes {
+    display: flex;
+    flex-direction: column;
+}
 .note-container {
     display: flex;
     flex-direction: column;
     position: relative;
-    height: 52vh;
-    width: 90vw;
-    overflow-y: hidden;
+    height: 60vh;
+    width: 100vw;
+    overflow-y: scroll;
+}
+
+.shadow:after {
+    content: "";
+    position: absolute;
+    bottom: 6vh;
+    height: 10%;
+    width: 100%;
+    background-image: linear-gradient(to bottom, rgba(255,255,255,0), $darkestGrey,);
 }
 
 .note-content{ 
     display: flex;
     flex-direction: column;
-
-    height: 100%;
+    align-items: center;
     width: 100%;
-    overflow-y: scroll;
-}
-
-.note-content:after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    height: 10%;
-    width: 100%;
-    background-image: linear-gradient(to bottom, rgba(255,255,255,0), $darkestGrey,);
 }
 
 .settings-cog {
