--- a/src/Styles/helpers/variables.scss
+++ b/src/Styles/helpers/variables.scss
@@ -8,4 +8,4 @@ $eventDefault: #6d5353;
 $characterDefault: #465B3C;
 $locationDefault: #47586B;
 $factionDefault: #695777;
-$scribbleDefault: #9DC5B4;
+$scribbleDefault: #808080;
